# WebCPP

./: .gitignore  .gitmodules  CMakeLists.txt  build_html.bat  build_win32.bat
assets/shaders/: sprite.sdr  tiles.sdr
src/: Assets.cpp  Assets.h  Common.h  Game.cpp  Game.h  Main.cpp  Main.h
src/entity/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/graphics/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  TileRenderer.cpp  TileRenderer.h
src/level/: Level.cpp  Level.h
src/state/: GameState.cpp  GameState.h  State.h
web/: index.html  webcpp.html  webcpp.js
